fixed image sizing issue on iOS

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -114,9 +114,6 @@ p {
   text-align: center;
   width: 100%;
   height: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -124,9 +121,7 @@ p {
   z-index: 5;
 }
 
-@media only screen and (max-width: 1100px) {
 
-}
 
 .appTitle {
   font-family: 'Homemade Apple', sans-serif;
@@ -1214,3 +1209,10 @@ p {
 
 
 
+/*Fixed background-image: cover issue on iOS*/
+@media only screen and (max-width: 1100px) {
+  .splashSectionOne, .splashSectionThree, .login-screen, .signup-screen, .backgroundBlurredImage, .firstEntry-screen, .backgroundBlurredImageTimeline {
+    background-size: auto;
+    background-attachment: scroll;
+  }
+}
